--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-<div fxLayout="column" fxFlexFill>
+<div fxFlexFill fxLayout="column">
   <mat-toolbar color="primary">
-    <button mat-icon-button (click)="sidenav.toggle()">
+    <button (click)="sidenav.toggle()" mat-icon-button>
       <mat-icon>menu</mat-icon>
     </button>
     <span>Ranking HDP</span>
   </mat-toolbar>
-  <mat-drawer-container fxFlex autosize hasBackdrop="true">
+  <mat-drawer-container autosize fxFlex hasBackdrop="true">
     <mat-drawer #sidenav mode="over">
       <mat-nav-list>
         <a mat-list-item routerLink="leaderboard">Home</a>
