--- a/src/app/features/leaderboard/leaderboard.component.html
+++ b/src/app/features/leaderboard/leaderboard.component.html
@@ -1,16 +1,16 @@
-<table mat-table [dataSource]="(datasource$ | async) ?? []" class="mat-elevation-z8">
+<table [dataSource]="(datasource$ | async) ?? []" class="mat-elevation-z8" mat-table>
   <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef>#</th>
-    <td mat-cell *matCellDef="let i = index"> {{i + 1}} </td>
+    <th *matHeaderCellDef mat-header-cell>#</th>
+    <td *matCellDef="let i = index" mat-cell> {{i + 1}} </td>
   </ng-container>
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Player</th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    <th *matHeaderCellDef mat-header-cell>Player</th>
+    <td *matCellDef="let element" mat-cell> {{element.name}} </td>
   </ng-container>
   <ng-container matColumnDef="points">
-    <th mat-header-cell *matHeaderCellDef>Points</th>
-    <td mat-cell *matCellDef="let element"> {{element.points}} </td>
+    <th *matHeaderCellDef mat-header-cell>Points</th>
+    <td *matCellDef="let element" mat-cell> {{element.points}} </td>
   </ng-container>
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr *matHeaderRowDef="displayedColumns" mat-header-row></tr>
+  <tr *matRowDef="let row; columns: displayedColumns;" mat-row></tr>
 </table>
