Adding player management skeleton

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
   <mat-drawer-container autosize fxFlex hasBackdrop="true">
     <mat-drawer #sidenav mode="over">
       <mat-nav-list>
-        <a mat-list-item routerLink="leaderboard">Home</a>
+        <a mat-list-item routerLink="leaderboard">Leaderboard</a>
         <a mat-list-item routerLink="players">Players</a>
       </mat-nav-list>
     </mat-drawer>
