--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,8 @@
   <mat-drawer-container autosize fxFlex hasBackdrop="true">
     <mat-drawer #sidenav mode="over">
       <mat-nav-list>
-        <a mat-list-item routerLink="leaderboard">Leaderboard</a>
-        <a mat-list-item routerLink="players">Players</a>
+        <a (click)="sidenav.toggle()" mat-list-item routerLink="leaderboard">Leaderboard</a>
+        <a (click)="sidenav.toggle()" mat-list-item routerLink="players">Players</a>
       </mat-nav-list>
     </mat-drawer>
     <mat-drawer-content>
