Separating player to a feature module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     <mat-drawer #sidenav mode="over">
       <mat-nav-list>
         <a (click)="sidenav.toggle()" mat-list-item routerLink="leaderboard">Leaderboard</a>
-        <a (click)="sidenav.toggle()" mat-list-item routerLink="players">Players</a>
+        <a (click)="sidenav.toggle()" mat-list-item routerLink="player">Players</a>
       </mat-nav-list>
     </mat-drawer>
     <mat-drawer-content>
