Separating leaderboard to a feature module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <button (click)="sidenav.toggle()" mat-icon-button>
       <mat-icon>menu</mat-icon>
     </button>
-    <span>Ranking HDP</span>
+    <span>Ranking</span>
   </mat-toolbar>
   <mat-drawer-container autosize fxFlex hasBackdrop="true">
     <mat-drawer #sidenav mode="over">
